<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center"
        tools:text="@string/question"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/rgOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/answer1" />

        <RadioButton
            android:id="@+id/rbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/answer2" />

        <RadioButton
            android:id="@+id/rbOpcion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/answer3" />

        <RadioButton
            android:id="@+id/rbOpcion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/answer4" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/limpiar"
            android:id="@+id/btLimpar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/comprobar"
            android:id="@+id/btComprobar"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNext"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

</LinearLayout>
</ScrollView>